chore: alignment fix and add start layout

--- a/styles/colors.css
+++ b/styles/colors.css
@@ -2,12 +2,12 @@
   --foreground: #e1e2e8;
   --background: #111418;
   --cursor: #e1e2e8;
-  --primary: #a0cafd;
-  --on-primary: #003258;
+  --primary: #a1cafd;
+  --on-primary: #003259;
   --secondary: #bbc7db;
   --on-secondary: #253140;
-  --tertiary: #d6bee4;
-  --on-tertiary: #3b2948;
+  --tertiary: #d7bee4;
+  --on-tertiary: #3b2947;
   --surface: #111418;
   --surface-bright: #36393e;
   --error: #ffb4ab;
